--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div class="go">
     <a href="main" ><%=image_tag("main_logo2.png", id:"index_logo", :onclick=>"stop()")%></a>
   </div>
-    <%=video_tag("trailer.m4v",autobuffer: true, :loop => true, id:"video")%>
+    <%=video_tag("trailer.mp4",autobuffer: true, :loop => true, id:"video")%>
   <div class="index_content">
     <p>Click Logo!</p>
     <p>Go Running</p>
