--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,9 +17,18 @@ $(document).ready(function(){
         $(this).attr("src", "../assets/main_logo2.png");
     });
 });
-setTimeout(function(){
-    document.getElementById("video").play();
-}, 1000);
+var playPromise = document.querySelector('video').play();
+
+// In browsers that don’t yet support this functionality,
+// playPromise won’t be defined.
+if (playPromise !== undefined) {
+  playPromise.then(function() {
+    // Automatic playback started!
+  }).catch(function(error) {
+    // Automatic playback failed.
+    // Show a UI element to let the user manually start playback.
+  });
+}
 function stop(){
     var vid = document.getElementById("video");
     vid.pause();
