--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div class="go">
     <a href="main" ><%=image_tag("main_logo2.png", id:"index_logo", :onclick=>"stop()")%></a>
   </div>
-    <%=video_tag("trailer.mp4",autobuffer: true, :loop => true, id:"video")%>
+    <%=video_tag("trailer.m4v",autobuffer: true, :loop => true, id:"video")%>
   <div class="index_content">
     <p>Click Logo!</p>
     <p>Go Running</p>
@@ -17,18 +17,9 @@ $(document).ready(function(){
         $(this).attr("src", "../assets/main_logo2.png");
     });
 });
-var playPromise = document.querySelector('video').play();
-
-// In browsers that don’t yet support this functionality,
-// playPromise won’t be defined.
-if (playPromise !== undefined) {
-  playPromise.then(function() {
-    // Automatic playback started!
-  }).catch(function(error) {
-    // Automatic playback failed.
-    // Show a UI element to let the user manually start playback.
-  });
-}
+setTimeout(function(){
+    document.getElementById("video").play();
+}, 1000);
 function stop(){
     var vid = document.getElementById("video");
     vid.pause();
