--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,9 @@
   <div class="go">
     <a href="main" ><%=image_tag("main_logo2.png", id:"index_logo", :onclick=>"stop()")%></a>
   </div>
-    <%=video_tag("https://s3.ap-northeast-2.amazonaws.com/hirunning/%ED%95%98%EC%9D%B4%EB%9F%AC%EB%8B%9D-%ED%8B%B0%EC%A0%80.m4v",autobuffer: true, :loop => true, id:"video")%>
+    <video autobuffer loop id="video">
+      <source src="https://s3.ap-northeast-2.amazonaws.com/hirunning/%ED%95%98%EC%9D%B4%EB%9F%AC%EB%8B%9D-%ED%8B%B0%EC%A0%80.m4v">
+    </video>
   <div class="index_content">
     <p>Click Logo!</p>
     <p>Go Running</p>
