--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -85,7 +85,9 @@
         <%i=i+1%>
         <%end%>
       </table>
+      <a href="all_member" class="cutstom_btn2" style="float:right; margin-right:15px;">all member</a>
     </div>
+    
     <div class="running_info  col-xs-12">
         <div class="Title_name">
         <span>Running Info</span>
@@ -185,9 +187,9 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="grade" class="col-sm-2 control-label">학년</label>
+                <label for="grade" class="col-sm-2 control-label">학번</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="grade" name="grade" placeholder="ex) 4">
+                  <input type="text" class="form-control" id="grade" name="grade" placeholder="ex) B000000">
                 </div>
               </div>
               <div class="form-group">
